feature/4: добавлена генерация отчета по покрытию тестами, добавлены тесты мокито